refactor(modernization): 升級 Java 21 新特性、修復 Service 快取自調用代理與加固 AI Review Gate (#61)
* refactor(modernization): 升級 Java 21 新特性、修復 Qodana 快取與代碼質量問題並統一文檔規範

* fix(modernization): 修正 Java 21 編譯器配置、Outbox 虛擬執行緒流控與補償驗證防禦

* refactor(service): 移除 getSelf 降級反模式並完善 Record 存取、JPA Metamodel 與 Outbox 測試

* refactor(record): 移除冗餘手寫 getter 樣板代碼並回歸 Java 21 標準 record 定義

* fix(ci): 強化 AI Review JSON 即時驗證、同模型 5 次指數退避重試與自動備援容錯

* fix(service): 恢復 Service 自調用 @Lazy self 快取代理並消除 FQN 規範違規

* fix(ci): 修復 Python 異常捕捉規範、AI Review JSON 解析完整性與 Outbox 併發測試

* fix(ci): 移除 AI Review 破壞性字元替換、支援動態重試配置並修復 Service 介面注入與代碼行長規範

* fix(outbox): 修復 Outbox 批次逾時 Future 取消中斷、狀態懸掛防禦、括號平衡 JSON 解析與 DIP 介面注入

* fix(outbox): 修復中斷狀態轉移、Python 異常捕捉規範與補充單元測試

* fix(webhook): 修復 LINE Webhook switch 空值處理、加固 AI Review Schema 驗證與補齊單元測試

* fix(review): 加固環境變數解析、消除 Outbox 測試競態、恢復 LINE 自動配置排除與空值防禦

* fix(review): 設定重試硬上限、防禦 LINE 空使用者 ID 與簡化信號量初始化

* fix(review): 加固 HTTP 413/429 降級與 JSON Fail-Closed 解析、優化 Outbox 中斷測試與修正技術文件

* feat(review): 支援 Gemini 多金鑰 (GEMINI_API_KEY_X) 自動探索輪替與 Groq 階梯式備援

* feat(review): 支援 Groq 與 Gemini 多金鑰隨機選取、429/403 冷卻清單機制與 Secret 脫敏

* fix(outbox): 移除批次逾時 Future 取消、優化補償還原批次查詢與重構 AI Review 狀態管理

* fix(review): 調降 AI Review 預設重試次數為 3 次以配合多金鑰輪替機制

* fix(review): 加固 CI Review 信任邊界、消除 Diff 硬截斷與強化 Key 脫敏雜湊

* fix(outbox): 修復 Outbox 狀態機 CAS 懸掛、重構拆分 AI Review 模組與加固 CI Workflow

- 修正 CompensationOutboxWorker 於 fresh entity 查無資料時改用 markFailedByOwner/markDeadByOwner 避免 NULL fencingVersion CAS 造成狀態懸掛 (F-001)

- 重構拆分 .github/ai-review/review.py 為單一職責子模組，使單檔行數全面小於 300 行以符合開發規範 (F-002)

- 加固 ai-review-trusted.yml 之 pr_number 參數為 required (F-004)

- 補充 CompensationOutboxWorker 之 publishSemaphore 為單實例限流之 Javadoc (F-005)

* fix(review): 加固 Fail-Closed Gate、強化 PR 目標校驗與重構 Python 規範合規

* fix(review): 強化 Diff 脫敏防護、清理 AlarmService 死代碼、補齊 Type Hints 與結構化章節提取

* fix(review): 加固 Prompt 邊界與確定性靜態檢查、強制 head_sha 綁定與 Metamodel 白名單

* fix(review): 強化 Java 批次章節覆蓋、語義分類、PR Review Fail-Closed 與 Outbox 競態測試

* fix(review): 支援 Gemini 